Non-unified build fixes, early December 2020 edition (bis) https://bugs.webkit.org/show_bug.cgi?id=219607

Unreviewed non-unified build fixes.


* contentextensions/ImmutableNFA.h:
* contentextensions/SerializedNFA.cpp:
* contentextensions/SerializedNFA.h:
* loader/DocumentLoader.cpp:
* platform/audio/MultiChannelResampler.h:
* platform/audio/SincResampler.h:


Canonical link: https://commits.webkit.org/232195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270519 268f45cc-cd09-0410-ab3c-d52691b4dbfc